# fastapi_kafka_example

./: README.md  docker-compose.yml  pyproject.toml
api/: main.py
