[tool.poetry]
name = "fastapi_kafka"
version = "0.1.0"
description = ""
authors = ["Gustavo Cavalcante <nowayhecodes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
aiokafka = "^0.7.2"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
